# low-latency-nlp-engine

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  csv_write.cpp  dataset.cpp  dl_pipeline.py  hashing.cpp  hashing.h  json_write.cpp  logreg_model.h  ngrams.cpp  ngrams.h  predict_main.cpp  reorganize_repo.sh  repo_map.txt  requirements.txt  run_three.sh  sgd_trainer.cpp  sgd_trainer.h  stage_04_train_cpp.py  text_clean.cpp  text_clean.h  tokenizer.h  train_main.cpp  tsv_reader.h
cpp/: CMakeLists.txt
cpp/app/: train_main.cpp
cpp/include/: csv_write.h  dataset.h  json_write.h  model_io.h  rows.h  tsv_reader.h  tsv_reader.h.bak
cpp/src/: logreg_model.cpp  sgd_trainer.cpp  sparse_vec.cpp  tokenizer.cpp  tsv_reader.cpp
data/processed/submissions/: gradient_boosting_submission_1.csv  logistic_regression_submission_1.csv  naive_bayes_submission_1.csv  random_forest_submission_1.csv  svm_submission_1.csv
data/processed/submissions_5fold/: gradient_boosting_submission_5foldfit_1.csv  logistic_regression_submission_5foldfit_1.csv  naive_bayes_submission_5foldfit_1.csv  random_forest_submission_5foldfit_1.csv  svm_submission_5foldfit_1.csv
data/processed/submissions_final/: svm_word12_C0.5_best_submission.csv
data/processed/tables/: model_summary.csv
fasttext_repo/: ft_config.py  ft_main.cpp  ft_main.py  ft_predict.hpp  ft_train.py
lgbm_repo/: lgb_loader.hpp  lgb_main.cpp  lgb_train.py
pipelines/: dl_pipeline.py
runs/20260228_135035/python/lr_word12_c4/: metrics.json  submission.csv
scripts/: generate_reports.py  reorganize_repo.sh  train_5fold_and_submit.py  train_classical.py
src/cpp/app/: train_main.cpp
src/cpp/include/: args.h  folds.h  json_write.h  metrics.h  model_io.h  sgd_trainer.h  sparse_vec.h
src/cpp/src/: args.cpp  folds.cpp  metrics.cpp  model_io.cpp
src/outputs/05_predict_cpp/: checkpoint.json  logreg_hashngram_5fold_v1_submission.csv  logreg_hashngram_5fold_v1_submission.parquet
src/scripts/: dl_pipeline.py
src/src/stages/: stage_05_predict_cpp.py
tests/: conftest.py  test_cpp.py  test_data.py  test_deep_learning.py  test_evaluation.py  test_fasttext_model.py  test_features.py  test_lgbm_model.py  test_model_fasttext.py  test_model_lgbm.py  test_outputs.py  test_repo_structure.py  test_scripts.py  test_stages.py  test_supervised.py  test_tinybert_model.py
tinybert_repo/: tb_config.hpp  tb_config.py  tb_export.py  tb_loader.cpp
(+13 files in other folders)
